# polarlearning

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  PROJECT_STRUCTURE.md  README.md  build_fast.ps1  build_fast.sh  dev_shell.ps1  dev_shell.sh  test_verbosity.sh
model-input-data/raw/: CaliforniaHousing.parquet
models/: .gitkeep
outputs/: .gitkeep
python/: .gitignore  DEVELOPMENT.md  Dockerfile  README.md  build.sh  build_fast.sh  dev.sh  dev_shell_fast.sh  performance_analysis.py  pytest.ini  requirements.txt  run.sh  test_fast.sh  tune_hyperparams.sh
python/src/: datasets.py  main.py  model.py  train.py
python/tests/: test_long_epochs.py  test_model_io.py
rust/: .gitignore  DEVELOPMENT.md  DNN_STRUCTURE.md  PROJECT_STRUCTURE.md  README.md  build_fast.sh  dev_shell.sh  libmse.rlib
rust/model-input-data/processed/: CaliforniaHousing.csv
rust/src/: main.rs  persistence.rs
rust/src/datasets/: mod.rs
rust/src/functional/: activations.rs  linear.rs
rust/src/init/: kaiming.rs  uniform.rs
rust/src/losses/: mae.rs
rust/src/nn/: sequential.rs
rust/src/optim/: mod.rs
rust/src/transforms/: mod.rs
src/: california_housing.rs  dataset_converter.rs  main.rs
src/datasets/: california_housing.rs  converter.rs
src/functional/: mod.rs
src/init/: mod.rs  normal.rs  xavier.rs
src/losses/: cross_entropy.rs  mod.rs
src/nn/: activation.rs  linear.rs  mod.rs  module.rs
