[package]
name = "polarlearning"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.43", features = ["lazy", "csv", "parquet", "strings", "temporal", "streaming"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
